# test_robot

./: .gitignore  README.md  build.sh  package.xml  setup.py
config/: local_costmap_params.yaml  nav2.rviz  nav2_params.yaml
launch/: robot_launch.py
resource/: test_robot
