<?xml version="1.0"?>
<package format="3">
  <name>test_robot</name>
  <version>0.0.0</version>
  <description>Test robot with D435 camera</description>
  <maintainer email="your@email.com">andrey</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>depthimage_to_laserscan</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>hoverboard_driver_usart2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
